Add: standard usage example

--- a/README.org
+++ b/README.org
@@ -34,6 +34,20 @@ ln -s ARES /home/$USER/.Mathematica/Applications/ARES
 
 * Usage
 
+To use ARES in a Mathematica notebook or package include
 #+BEGIN_SRC Mathematica
 <<ARES`
+#+END_SRC
+
+An example of standard usage
+#+BEGIN_SRC Mathematica
+(* Load the ARES package *)
+<<ARES`
+
+(* declare an observable of interest, for example the D-parameter *)
+dpar = BuildObservable["DParameter"];
+
+(* Resum the D-parameter for the event configuration given by {xq, xqb}, where the observable takes the value v *)
+Resum[{xq, xqb}, Log[1/v], dpar, {"Order" -> "NNLL"}]
+
 #+END_SRC
